# MyEngine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
assets/shaders/: basic.frag  basic.vert
docs/html/: _asset_manager_8h_source.html  _camera_8h_source.html  _directional_light_8h_source.html  _engine_8h_source.html  _input_8h_source.html  _log_8h_source.html  _logger_8h_source.html  _mesh_8h_source.html  _renderer_8h_source.html  _scene_8h_source.html  _shader_8h_source.html  _window_8h_source.html  annotated.html  annotated_dup.js  class_asset_manager-members.html  class_asset_manager.html  class_camera-members.html  class_camera.html  class_camera.js  class_directional_light-members.html  class_directional_light.html  class_directional_light.js  class_engine-members.html  class_engine.html  class_input-members.html  class_input.html  class_logger-members.html  class_logger.html  class_mesh-members.html  class_mesh.html  class_mesh.js  class_renderer-members.html  class_renderer.html  class_renderer.js  class_scene-members.html  class_scene.html  class_scene.js  class_shader-members.html  class_shader.html  class_shader.js  (+25 more)
docs/latex/: _asset_manager_8h_source.tex  _camera_8h_source.tex  _directional_light_8h_source.tex  _engine_8h_source.tex  _input_8h_source.tex  _log_8h_source.tex  _logger_8h_source.tex  _mesh_8h_source.tex  _renderer_8h_source.tex  _scene_8h_source.tex  _shader_8h_source.tex  _window_8h_source.tex  annotated.tex  class_asset_manager.tex  class_camera.tex  class_directional_light.tex  class_engine.tex  class_input.tex  files.tex  (+14 more)
src/: main.cpp
(+57 files in other folders)
